[package]
name = "dota_mmr"
version = "0.1.0"
authors = ["aramus <aramus92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10", features = ["json"]}
serde = {version = "1.0.114", features = ["derive"]}
tokio = {version = "0.2", features = ["full"]}
